<resources>
    <string name="app_name" translatable="false">TestNet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Tests Results List</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_start">Start</string>
    <string name="not_deviceInfo">Couldn\'t get device information.</string>
    <string name="permissions_Needed">Permissions Needed</string>
    <string name="permissions_Needed_Dialog">This app needs access to your location,
        and phone configuration to bring a high precision result on your tests</string>
    <string name="request_Location">Location Permission Needed</string>
    <string name="request_Location_Dialog">This app needs access to your location to retrieve cell information and provide accurate results.</string>
    <string name="request_Phone_Permission">Phone State Permission Needed</string>
    <string name="request_Phone_Dialog">This app needs access to your phone configuration to retrieve cell information and provide accurate results.</string>
   <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="grant_Permission">Grant Permission</string>
    <string name="continue_Without_Permission">Continue Without Permission</string>
    <string name="continue_label">Continue</string>
    <string name="dont_Ask_Again">Don\'t ask again</string>
    <string name="downloadspeedstats_class_name">Download Speed Stats</string>
    <string name="mega_bits_per_second" translatable="false">Mb/s</string>
    <string name="uploadspeedstats_class_name">Upload Speed Stats</string>
    <string name="indiviual_score">Indiviual score:</string>
    <string name="bonus_score">"Bonus factor: "</string>
    <string name="signal_strength">Signal strength:</string>
    <string name="download_speed">Download Speed</string>
    <string name="upload_speed">Upload Speed</string>
    <string name="tests_finalized">Tests Finalized</string>

</resources>