<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.qos.testnet.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.qos.testnet.ui.dashboard.IndividualTestFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_individual_test" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.qos.testnet.ui.notifications.TestResultsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_test_results" >
        <action
            android:id="@+id/action_navigation_notifications_to_testDetailsFragment3"
            app:destination="@id/testDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/testDetailsFragment"
        android:name="com.qos.testnet.ui.notifications.details.TestDetailsFragment"
        android:label="Test Details"
        tools:layout="@layout/fragment_test_details">
        <argument
            android:name="testData"
            app:argType="com.qos.testnet.data.local.TestData" />
        <action
            android:id="@+id/action_testDetailsFragment_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

</navigation>